# coding-agent-eval

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  temp.md
.claude/: settings.local.json
config/: eval_config.yaml
config/agents/: claude_code.yaml  opencode.yaml  opencode_omo.yaml
config/environments/: common.yaml  native_linux.yaml  wsl.yaml
dashboard/: server.py
dashboard/static/: app.js  index.html  style.css
data/: .image_size_cache.json  swebench_lite.jsonl  swebench_lite_origin.jsonl  swebench_lite_small.jsonl  swebench_lite_test2.jsonl  swebench_local.jsonl  swebench_multi.jsonl  swebench_multi_cpp_sample.jsonl  swebench_multi_extract.jsonl  swebench_multi_java_sample.jsonl  swebench_multi_origin.jsonl  swebench_verified_small.jsonl  swebench_verified_test2.jsonl
docs/: corp_env_usage.md
plan/: corp_network_design.md  failure_diagnostics.md  multilingual_design.md  phase1.md  task.md
results/: image_availability_local.json  image_availability_verified.json
scripts/: check_docker_images.py  cleanup.py  create_test_data.py  export_dataset.py  generate_report.py  pick_small_instances.py  prepull_images.py  run_docker_eval.py  run_e2e_test.py  run_eval.py  setup_env.sh  swebench_sampler.py
src/adapters/: base.py  claude_code.py  opencode.py  opencode_omo.py
src/core/: config.py  corp_env.py  env_detect.py  models.py  run_id.py  tmpdir.py
src/dataset/: loader.py  sampler.py
tests/: test_corp_env.py  test_docker_evaluator_propagation.py  test_failure_classifier.py  test_ruby_profile.py
(+1676 files in other folders)
