[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-eval"
version = "0.1.0"
description = "CLI AI Coding Agent Performance Evaluation System"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "datasets>=2.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
